# initiation-cmake-pong

./: CMakeLists.txt  README.md
pong/: Drawing.cpp  Drawing.hpp  GameLogic.cpp  Logic.hpp  PaddleLogic.cpp  main.cpp
